.kube/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mykudos-api
  labels:
    app: mykudos-api
    name: mykudos-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mykudos-api
  template:
    metadata:
      labels:
        app: mykudos-api
    spec:
      containers:
        - name: mykudos-api
          image: docker.lps.krthomolog.com.br/mykudos-api:[VERSION_CI]
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
