.kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mykudos-api
spec:
  type: NodePort
  selector:
    app: mykudos-api
  ports:
    - port: 8080
